Fixed contactCards styling by removing right margin on mobile devices

--- a/styles/modules/ContactCards.module.sass
+++ b/styles/modules/ContactCards.module.sass
@@ -9,6 +9,9 @@
 .col
   &:nth-child(1)
     margin-right: 100px
+  @media(max-width: 541px)
+    &:nth-child(1)
+      margin-right: 0px
   & > *
     margin-bottom: 39px
     @include media(desktop, laptop, tablet)
